--- a/Qt/ComUSB/Micros2025/microscom.ui
+++ b/Qt/ComUSB/Micros2025/microscom.ui
@@ -6,64 +6,46 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>488</width>
+    <height>424</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MicrosCom</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QComboBox" name="SerialPort">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>30</y>
-      <width>72</width>
-      <height>24</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QComboBox" name="Comand">
-    <property name="geometry">
-     <rect>
-      <x>140</x>
-      <y>30</y>
-      <width>72</width>
-      <height>24</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QPlainTextEdit" name="plainTextEdit">
-    <property name="geometry">
-     <rect>
-      <x>33</x>
-      <y>189</y>
-      <width>251</width>
-      <height>201</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>70</y>
-      <width>80</width>
-      <height>24</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>PushButton</string>
-    </property>
-   </widget>
+   <layout class="QGridLayout" name="gridLayout">
+    <item row="4" column="0" colspan="2">
+     <widget class="QPlainTextEdit" name="plainTextEdit"/>
+    </item>
+    <item row="1" column="1">
+     <widget class="QComboBox" name="Comand"/>
+    </item>
+    <item row="1" column="0">
+     <widget class="QComboBox" name="SerialPort"/>
+    </item>
+    <item row="2" column="0">
+     <widget class="QPushButton" name="Connect">
+      <property name="text">
+       <string>Connect</string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="1">
+     <widget class="QPushButton" name="SendButton">
+      <property name="text">
+       <string>SendCMD</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
+     <width>488</width>
      <height>21</height>
     </rect>
    </property>
